...
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="22dp"
        android:paddingStart="@dimen/fre_button_padding"
        android:paddingEnd="@dimen/fre_button_padding"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        chrome:buttonColor="@color/light_active_color"
        chrome:buttonRaised="false" />

...
